2008-11-21  Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/utils/pooled_list.c: Fixed critical bug in randomisation routine.

	* : Tagged as 0.1.5.2-beta

2008-11-14  Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* : Memory logging implemented. Activated using --enable-memlog.
	* include/sqlite3.h, src/utils/sqlite3.c: Added sqlite3 files for storing
	  memory usage.
	* configure.ac, Makefile.am, src/utils/Makefile.am: sqlite3 built into 
	  binaries if Memory Logging is enabled.
	* src/progs/mboard-parse-memlogdb: Added program to generate graphs from 
	  memlog output. Installed when source configured with --enable-memlog

	* src/progs/mboard-config.in: Added script to provide users with required 
	  compile/link options, as well as to query parameters used to configure 
	  and compile the local installation of libmboard.
	
	* m4/utils.m4: Added collection of small utiltity macros.
	
	* src/utils/objmap.c: Improved performance.
	* src/utils/pooled_list.c: Improved performance.
	* src/*/MB_Iterator_Randomise.c: Faster randomisation.

	* m4/check_parallel.m4: Improved portability.

	* : Tagged as 0.1.5-beta

2008-08-08  Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/utils/*.c, src/serial/*.c: Further removal of checks to errno (missed
	  out during previous update).
	* src/utils/objmap.c, include/mb_objmap.h: ObjectMapper is now thread-safe.
	
	* src/utils/tag_table.c, include mb_tag_table.h: TagTable implemented as 
	  utility to manage message tagging.
	* tests/testsuite_tag_table: Unit tests implemented for TagTable utility.
	
	* src/parallel/comm*, includes/*: Communication routines simplified (less 
	  optimised, for now). Better support for varios MPI implementations.
	* src/parallel/function_assign.c, src/parallel/comm.c: Message boards can
	  now be assigned with parameters of different size (however the function 
	  handle must still be the same).
	  
	* autogen.sh, example/circles_mb/autogen.sh: Added version checks for 