@@ -250,7 +250,7 @@ then
 	THREADS_CFLAGS="${PTHREAD_CFLAGS}"
 	THREADS_LIBS="${PTHREAD_LIBS}"
 	# yes, use of CFLAGS as LDFLAGS is intentional. Not a typo.
-	THREADS_LDFLAGS="${THREADS_CFLAGS}" 
+	THREADS_LDFLAGS="${PTHREAD_LDFLAGS} " 
 	
 	MB_PARALLEL_CFLAGS="${MPICFLAGS} ${THREADS_CFLAGS} ${MB_EXTRA_CFLAGS}"
 	MB_PARALLEL_LDFLAGS="${MPILDFLAGS} ${THREADS_LDFLAGS} ${MB_EXTRA_LDFLAGS}"
